--- a/demoapp1/src/main/res/layout/activity_main.xml
+++ b/demoapp1/src/main/res/layout/activity_main.xml
@@ -6,6 +6,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView" />
+
+    <ImageView
+        android:layout_width="600px"
+        android:layout_height="200px"
+        android:id="@+id/imageView"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_marginLeft="75dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginBottom="208dp" />
 
 </RelativeLayout>
